@@ -1,25 +1,20 @@
 package com.jetbrains.youtrack.db.internal.server;
 
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertTrue;
 
-import com.jetbrains.youtrack.db.api.DatabaseSession;
 import com.jetbrains.youtrack.db.api.DatabaseType;
-import com.jetbrains.youtrack.db.api.SessionPool;
+import com.jetbrains.youtrack.db.api.YourTracks;
 import com.jetbrains.youtrack.db.api.config.GlobalConfiguration;
 import com.jetbrains.youtrack.db.api.config.YouTrackDBConfig;
+import com.jetbrains.youtrack.db.api.remote.RemoteYouTrackDB;
 import com.jetbrains.youtrack.db.internal.common.io.FileUtils;
 import com.jetbrains.youtrack.db.internal.core.YouTrackDBEnginesManager;
-import com.jetbrains.youtrack.db.internal.core.db.DatabaseSessionInternal;
-import com.jetbrains.youtrack.db.internal.core.db.SessionPoolImpl;
-import com.jetbrains.youtrack.db.internal.core.db.YouTrackDBImpl;
 import com.jetbrains.youtrack.db.internal.core.exception.StorageException;
 import java.io.File;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import org.junit.After;
 import org.junit.Assert;
@@ -35,7 +30,7 @@ public class YouTrackDBRemoteTest {
   private static final String SERVER_DIRECTORY = "./target/dbfactory";
   private YouTrackDBServer server;
 
-  private YouTrackDBImpl factory;
+  private RemoteYouTrackDB factory;
 
   @Before
   public void before() throws Exception {
@@ -55,7 +50,7 @@ public class YouTrackDBRemoteTest {
                 300_000)
             .build();
 
-    factory = new YouTrackDBImpl("remote:localhost", "root", "root", config);
+    factory = YourTracks.remote("remote:localhost", "root", "root", config);
   }
 
   @Test
@@ -64,11 +59,13 @@ public class YouTrackDBRemoteTest {
       factory.execute("create database test memory users (admin identified by 'admin' role admin)");
     }
 
-    var db = (DatabaseSessionInternal) factory.open("test", "admin",
+    var db = factory.open("test", "admin",
         "admin");
-    db.begin();
-    db.newEntity();
-    db.commit();
+    db.executeSQLScript("""
+        begin;
+        insert into O;
+        commit;
+        """);
     db.close();
   }
 
@@ -94,11 +91,13 @@ public class YouTrackDBRemoteTest {
       factory.execute("create database test memory users (admin identified by 'admin' role admin)");
     }
 
-    SessionPool pool = new SessionPoolImpl(factory, "test", "admin", "admin");
-    var db = (DatabaseSessionInternal) pool.acquire();
-    db.begin();
-    db.newEntity();
-    db.commit();
+    var pool = factory.cachedPool("test", "admin", "admin");
+    var db = pool.acquire();
+    db.executeSQLScript("""
+        begin;
+        insert into O;
+        commit;
+        """);
     db.close();
     pool.close();
   }
@@ -168,23 +167,14 @@ public class YouTrackDBRemoteTest {
               + " identified by 'reader' role reader, writer identified by 'writer' role writer)");
     }
 
-    SessionPool pool = new SessionPoolImpl(factory, "test", "admin", "admin");
+    var pool = factory.cachedPool("test", "admin", "admin");
 
     // do a query and assert on other thread
     Runnable acquirer =
         () -> {
-          var db = pool.acquire();
-
-          try {
-            assertThat(((DatabaseSessionInternal) db).isActiveOnCurrentThread()).isTrue();
-            db.executeInTx(transaction -> {
-              var res = transaction.query("SELECT * FROM OUser");
-              assertEquals(3, res.stream().count());
-            });
-
-          } finally {
-
-            db.close();
+          try (var db = pool.acquire()) {
+            var res = db.query("SELECT * FROM OUser");
+            assertEquals(3, res.stream().count());
           }
         };
 
@@ -193,18 +183,18 @@ public class YouTrackDBRemoteTest {
         IntStream.range(0, 19)
             .boxed()
             .map(i -> CompletableFuture.runAsync(acquirer))
-            .collect(Collectors.toList());
+            .toList();
 
-    futures.forEach(cf -> cf.join());
+    futures.forEach(CompletableFuture::join);
 
     pool.close();
   }
 
   @Test
   public void testListDatabases() {
-    assertEquals(0, factory.list().size());
+    assertEquals(0, factory.listDatabases().size());
     factory.execute("create database test memory users (admin identified by 'admin' role admin)");
-    var databases = factory.list();
+    var databases = factory.listDatabases();
     assertEquals(1, databases.size());
     assertTrue(databases.contains("test"));
   }
@@ -218,9 +208,7 @@ public class YouTrackDBRemoteTest {
             .addGlobalConfigurationParameter(GlobalConfiguration.CREATE_DEFAULT_USERS, false)
             .build());
     try (var session = factory.open("noUser", "root", "root")) {
-      session.executeInTx(transaction -> {
-        assertEquals(0, transaction.query("select from OUser").stream().count());
-      });
+      assertEquals(0, session.query("select from OUser").stream().count());
     }
   }
 
@@ -233,22 +221,8 @@ public class YouTrackDBRemoteTest {
             .addGlobalConfigurationParameter(GlobalConfiguration.CREATE_DEFAULT_USERS, true)
             .build());
     try (var session = factory.open("noUser", "root", "root")) {
-      session.executeInTx(transaction -> {
-        assertEquals(3, transaction.query("select from OUser").stream().count());
-      });
+      assertEquals(3, session.query("select from OUser").stream().count());
     }
-  }
-
-  @Test
-  public void testCopyOpenedDatabase() {
-    factory.execute("create database test memory users (admin identified by 'admin' role admin)");
-    DatabaseSession db1;
-    try (var db =
-        (DatabaseSessionInternal) factory.open("test", "admin", "admin")) {
-      db1 = db.copy();
-    }
-    assertFalse(db1.isClosed());
-    db1.close();
   }
 
   @Test
@@ -266,7 +240,7 @@ public class YouTrackDBRemoteTest {
 
   @After
   public void after() {
-    for (var db : factory.list()) {
+    for (var db : factory.listDatabases()) {
       factory.drop(db);
     }
 
